fix phantom right margin on mobile

--- a/assets/less/header.less
+++ b/assets/less/header.less
@@ -8,11 +8,16 @@ nav.site-header {
 
 	//omnipresent navbar
 	.navbar-header{
-		padding: 5px 15px;
+		//padding: 5px 15px;
+		margin-left: 0px;
+		margin-right: 0px;
 
 		div.logo{
 			padding-top: 10px;
 			padding-left: 20px;
+		}
+		.navbar-toggle{
+			//margin-right: 0px;
 		}
 	}
 	// main dropdown menu
